# vetric

./: Cargo.toml  LICENSE  README.md
crates/vetric/: Cargo.toml  README.md
crates/vetric-exporter/: Cargo.toml  README.md
crates/vetric-exporter/src/: lib.rs  metrics.rs
crates/vetric-exporter/src/exporter/: mod.rs  tests.rs
crates/vetric-macros/: Cargo.toml  README.md
crates/vetric-macros/src/: labels.rs  lib.rs  metrics.rs  register.rs
crates/vetric/src/: buckets.rs  builder.rs  collector.rs  descriptors.rs  format.rs  lib.rs  metrics.rs  registry.rs  tests.rs  traits.rs  wrappers.rs
crates/vetric/tests/: integration.rs
crates/vetric/tests/ui/labels/: bogus_field_type.rs  bogus_label_name_in_attr.rs  bogus_label_name_in_field.rs  bogus_label_name_in_metrics_attr.rs  duplicate_label_value.rs  non_ascii_label_value.rs  rename_all_with_complex_fields.rs  rename_and_format_clash.rs  unimplemented_format.rs  unsupported_attribute.rs  unsupported_attribute.stderr  unsupported_container.rs  unsupported_generics.rs  unsupported_generics_for_set.rs  unsupported_rename_rule.rs  unsupported_variant_attr.rs  unsupported_variant_attr.stderr
crates/vetric/tests/ui/metrics/: bogus_buckets.rs  bogus_metric_name.rs  bogus_prefix.rs  bogus_unit.rs  missing_buckets.rs  non_monotonic_buckets.rs  unnecessary_buckets.rs  unsupported_attribute.rs  unsupported_attribute.stderr  unsupported_field_attr.rs  unsupported_field_attr.stderr  unsupported_generics.rs  unsupported_item.rs
