[workspace]
members = ["crates/vetric", "crates/vetric-exporter", "crates/vetric-macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
assert_matches = "1.5"
compile-fmt = { version = "0.1.0", git = "https://github.com/vivijj/compile-fmt.git" }
derive_more = "0.99"

elsa = "1.9"
hyper = { version = "1.0", features = ["client", "server", "http1"] }
linkme = "0.3"

once_cell = "1.18"
proc-macro2 = "1.0"
prometheus-client = "0.22"
prometheus-http-query = "0.7"
quote = "1.0"
rand = "0.8"
syn = { version = "2.0", features = ["full"] }
tempfile = "3.8"
tokio = "1.34"
tracing = "0.1"
tracing-capture = "0.1"
tracing-subscriber = "0.3"
trybuild = "1.0"
version-sync = "0.9"
