[package]
name = "vetric-exporter"
description = "Prometheus exporter for metrics defined using `vetric`"
readme = "README.md"
version.workspace = true
edition.workspace = true

[dependencies]
vetric = { version = "0.1.0", path = "../vetric" }

hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = {version = "1.34", features = ["full"]}
hyper.workspace = true
once_cell.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tracing-capture.workspace = true
tracing-subscriber.workspace = true
version-sync.workspace = true
