[package]
name = "vetric-macros"
description = "Procedural macros for `vetric` crate"
readme = "README.md"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
version-sync.workspace = true
